--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "node --experimental-strip-types src/index.ts",
     "test": "vitest",
     "postinstall": "npm run build",
-    "lint": "eslint \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "lint": "npm run format && eslint \"src/**/*.ts\""
   },
   "files": [
     ".cursorrules",
@@ -43,6 +44,7 @@
     "esbuild": "^0.20.1",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   },
