--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cursor-tools",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "CLI tool for asking questions about web content and repositories",
   "type": "module",
   "main": "./dist/index.js",
@@ -47,8 +47,7 @@
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.1",
-    "cursor-tools": "latest"
+    "vitest": "^1.3.1"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
