--- a/just-ask.config.json
+++ b/just-ask.config.json
@@ -3,6 +3,6 @@
     "model": "llama-3.1-sonar-large-128k-online"
   },
   "gemini": {
-    "model": "gemini-2.0-flash-thinking-exp"
+    "model": "gemini-2.0-thinking-exp"
   }
 } 
