--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "eventsource-client": "^1.1.3",
-    "repomix": "^0.2.20"
+    "repomix": "^0.2.24",
+    "tiktoken": "^1.0.18"
   },
   "engines": {
     "node": ">=18.0.0"
