--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.0.13",
+  "version": "0.0.14",
   "type": "module",
   "main": "./dist/index.cjs",
   "bin": {
@@ -54,8 +54,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "eventsource-client": "^1.1.3",
-    "repomix": "^0.2.24",
-    "tiktoken": "^1.0.20"
+    "repomix": "^0.2.24"
   },
   "engines": {
     "node": ">=18.0.0"
