--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "test": "vitest",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "lint": "npm run format && eslint \"src/**/*.ts\"",
-    "release": "npm run lint && npm run build && git add . && git commit -m 'release' && npm publish"
+    "release": "node scripts/release.cjs"
   },
   "files": [
     "package.json",
     "dist",
     "src",
+    "scripts",
     "README.md"
   ],
   "author": "",
