--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.3.4",
+  "version": "0.4.0-alpha01",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -26,8 +26,6 @@
   "files": [
     "package.json",
     "dist",
-    "src",
-    "scripts",
     "README.md"
   ],
   "author": "",
