--- a/cursor-tools.config.json
+++ b/cursor-tools.config.json
@@ -4,5 +4,8 @@
   },
   "gemini": {
     "model": "gemini-2.0-flash-thinking-exp-01-21"
+  },
+  "tokenCount": {
+    "encoding": "o200k_base"
   }
 }
