--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "eventsource-client": "^1.1.3",
     "repomix": "^0.2.24"
   },
+  "peerDependencies": {
+    "playwright": "^1.50.1"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
