--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.4.3-alpha.4",
+  "version": "0.4.3-alpha.7",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -45,13 +45,13 @@
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
+    "cursor-tools": "latest",
     "esbuild": "^0.24.2",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.3.3",
-    "vitest": "^3.0.5",
-    "cursor-tools": "latest"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "@browserbasehq/stagehand": "^1.12.0",
@@ -65,5 +65,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "overrides": {
+    "punycode": "^2.3.1"
   }
 }
