--- a/cursor-tools.config.json
+++ b/cursor-tools.config.json
@@ -3,9 +3,20 @@
     "model": "sonar-pro"
   },
   "gemini": {
-    "model": "gemini-2.0-flash-thinking-exp-01-21"
+    "model": "gemini-2.0-pro-exp-02-05"
   },
   "tokenCount": {
     "encoding": "o200k_base"
+  },
+  "browser": {
+    "headless": true,
+    "defaultViewport": "1280x720",
+    "timeout": 30000
+  },
+  "stagehand": {
+    "provider": "openai",
+    "verbose": false,
+    "debugDom": false,
+    "enableCaching": true
   }
 }
