--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.4.3-alpha.7",
+  "version": "0.4.3-alpha.8",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -54,14 +54,14 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
-    "@browserbasehq/stagehand": "^1.12.0",
-    "dotenv": "^16.4.7",
-    "eventsource-client": "^1.1.3",
-    "repomix": "^0.2.24",
-    "zod": "^3.24.1"
+    "@browserbasehq/stagehand": "1.12.0",
+    "dotenv": "16.4.7",
+    "eventsource-client": "1.1.3",
+    "repomix": "0.2.24",
+    "zod": "3.24.1"
   },
   "peerDependencies": {
-    "playwright": "^1.50.1"
+    "playwright": "1.50.1"
   },
   "engines": {
     "node": ">=18.0.0"
