--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.4.3-alpha.8",
+  "version": "0.4.3-alpha.10",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -17,7 +17,7 @@
     "compile": "tsc -build",
     "build": "node build.js",
     "prepublish": "npm run compile && npm run lint && npm run build",
-    "dev": "bun src/index.ts",
+    "dev": "node --import=tsx src/index.ts",
     "serve-test": "bun --hot tests/commands/browser/serve.ts",
     "test": "vitest",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -50,6 +50,7 @@
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
   },
@@ -57,6 +58,7 @@
     "@browserbasehq/stagehand": "1.12.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
+    "punycode": "^2.3.1",
     "repomix": "0.2.24",
     "zod": "3.24.1"
   },
