--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.4.3-alpha.23",
+  "version": "0.5.0",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
