Fix/rollback rule directory (#40)
* fix: implement USE_LEGACY env as workaround for cursor bug

- If USE_LEGACY=true, use .cursorrules
- If USE_LEGACY is empty, prompt the user
- If USE_LEGACY=false, use .cursor/rules dir

* chore: update docs

* refactor: rename USE_LEGACY to USE_LEGACY_CURSORRULES

---------

Co-authored-by: Andre Treib <andre.schumacher.treib@gmail.com>

--- a/.cursor-tools.env.example
+++ b/.cursor-tools.env.example
@@ -1,2 +1,5 @@
 PERPLEXITY_API_KEY="your-api-key-here"
 GEMINI_API_KEY="your-api-key-here"
+
+# Optional: Set to 'true' to use legacy .cursorrules file instead of .cursor/rules/cursor-tools.mdc
+# USE_LEGACY_CURSORRULES=true
