--- a/cursor-tools.config.json
+++ b/cursor-tools.config.json
@@ -3,7 +3,27 @@
     "model": "sonar-pro"
   },
   "gemini": {
-    "model": "gemini-2.0-pro-exp-02-05"
+    "model": "gemini-2.0-flash-thinking-exp",
+    "maxTokens": 10000
+  },
+  "openai": {
+    "model": "o3-mini",
+    "maxTokens": 10000
+  },
+  "plan": {
+    "fileProvider": "gemini",
+    "thinkingProvider": "openai",
+    "fileMaxTokens": 8192,
+    "thinkingMaxTokens": 8192
+  },
+  "repo": {
+    "provider": "gemini",
+    "maxTokens": 10000
+  },
+  "doc": {
+    "maxRepoSizeMB": 100,
+    "provider": "gemini",
+    "maxTokens": 10000
   },
   "tokenCount": {
     "encoding": "o200k_base"
