--- a/.cursor-tools.env.example
+++ b/.cursor-tools.env.example
@@ -1,5 +1,4 @@
 PERPLEXITY_API_KEY="your-api-key-here"
 GEMINI_API_KEY="your-api-key-here"
-
-# Optional: Set to 'true' to use legacy .cursorrules file instead of .cursor/rules/cursor-tools.mdc
-# USE_LEGACY_CURSORRULES=true
+OPENAI_API_KEY="your-api-key-here"
+OPENROUTER_API_KEY="your-api-key-here"
