--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.5.1-alpha.2",
+  "version": "0.6.0-alpha.0",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -55,9 +55,10 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
-    "@browserbasehq/stagehand": "1.12.0",
+    "@browserbasehq/stagehand": "1.13.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
+    "openai": "^4.83.0",
     "punycode": "^2.3.1",
     "repomix": "0.2.24",
     "zod": "3.24.1"
