--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.36.3",
     "@browserbasehq/stagehand": "1.13.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
