--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
     "@browserbasehq/stagehand": "1.13.0",
+    "@modelcontextprotocol/sdk": "^1.5.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
     "openai": "^4.83.0",
