--- a/package.json
+++ b/package.json
@@ -73,5 +73,10 @@
   },
   "overrides": {
     "punycode": "^2.3.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
