feat: Add ClickUp integration (rebased) (#45)
* feat: implement clickup command

* feat: add clickup command instruction to template

* feat: request clickup api token on install

* chore: update docs

---------

Co-authored-by: Andre Treib <andre.schumacher.treib@gmail.com>

--- a/.cursor-tools.env.example
+++ b/.cursor-tools.env.example
@@ -2,3 +2,8 @@ PERPLEXITY_API_KEY="your-api-key-here"
 GEMINI_API_KEY="your-api-key-here"
 OPENAI_API_KEY="your-api-key-here"
 OPENROUTER_API_KEY="your-api-key-here"
+CLICKUP_API_TOKEN="your-api-token-here" # https://app.clickup.com/settings/apps
+ANTHROPIC_API_KEY="your-api-key-here"
+GROQ_API_KEY="your-api-key-here"
+MODELBOX_API_KEY="your-api-key-here"
+FIRECRAWL_API_KEY="your-api-key-here"
