--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@modelcontextprotocol/sdk": "^1.5.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
+    "google-auth-library": "^9.15.1",
     "openai": "^4.85.3",
     "punycode": "^2.3.1",
     "repomix": "0.2.29",
