add a postinstall command

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "vitest",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "lint": "npm run format && eslint \"src/**/*.ts\"",
-    "release": "node scripts/release.cjs"
+    "release": "node scripts/release.cjs",
+    "postinstall": "npm run build"
   },
   "files": [
     "package.json",
@@ -58,6 +59,7 @@
     "@anthropic-ai/sdk": "^0.36.3",
     "@browserbasehq/stagehand": "^1.13.1",
     "@modelcontextprotocol/sdk": "^1.5.0",
+    "commander": "^13.1.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
     "google-auth-library": "^9.15.1",
