use prepare for git installs

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "lint": "npm run format && eslint \"src/**/*.ts\"",
     "release": "node scripts/release.cjs",
-    "postinstall": "npm run build"
+    "prepare": "npm run build"
   },
   "files": [
     "package.json",
