--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test": "vitest",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "lint": "npm run format && eslint \"src/**/*.ts\"",
-    "release": "node scripts/release.cjs",
-    "prepare": "npm run build"
+    "release": "node scripts/release.cjs"
   },
   "files": [
     "package.json",
@@ -58,7 +57,6 @@
     "@anthropic-ai/sdk": "^0.36.3",
     "@browserbasehq/stagehand": "^1.13.1",
     "@modelcontextprotocol/sdk": "^1.5.0",
-    "commander": "^13.1.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
     "google-auth-library": "^9.15.1",
@@ -66,9 +64,6 @@
     "punycode": "^2.3.1",
     "repomix": "0.2.29",
     "zod": "3.24.2"
-  },
-  "peerDependencies": {
-    "playwright": "1.50.1"
   },
   "engines": {
     "node": ">=18.0.0"
