--- a/package.json
+++ b/package.json
@@ -55,12 +55,17 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
-    "@browserbasehq/stagehand": "^1.13.1",
+    "@browserbasehq/stagehand": "^1.14.0",
     "@modelcontextprotocol/sdk": "^1.5.0",
+    "@types/glob": "^8.1.0",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
+    "glob": "^11.0.1",
     "google-auth-library": "^9.15.1",
     "openai": "^4.85.3",
+    "p-queue": "^8.1.0",
+    "playwright": "1.50.1",
+    "playwright-core": "1.50.1",
     "punycode": "^2.3.1",
     "repomix": "0.2.35",
     "zod": "3.24.2"
@@ -69,7 +74,8 @@
     "node": ">=18.0.0"
   },
   "overrides": {
-    "punycode": "^2.3.1"
+    "punycode": "^2.3.1",
+    "playwright-core": "1.50.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
