--- a/cursor-tools.config.json
+++ b/cursor-tools.config.json
@@ -3,7 +3,7 @@
     "model": "sonar-pro"
   },
   "gemini": {
-    "model": "gemini-2.0-flash-thinking-exp",
+    "model": "gemini-2.5-pro-exp-03-25",
     "maxTokens": 8192
   },
   "openai": {
