rename to vibe-tools (#100)
* rename to vibe tools

* fix compile

* added migration from cursor-tools to vibe-tools

* HUUUGE: added "ide" param, added cline/roo rules, claude-code global/local rules

* removed legacy cursorrules, added helper func for shared rules file

* update claude-code and windsurfrules instead of rteplacing them

* switched cline/roo to folder-based rules

* fix repomix

* fixed HUGE bug json command

* added proper clinerules FILE or folder support

* changed cursorrules to vibe-rules in new json install

* HUUUGE: Install v2

* fixed bugs, changed clinerules to be consistent

* remove clineroorules

* fixed model names & default models

---------

Co-authored-by: Artem Murzin <flowisgreat@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cursor-tools",
+  "name": "vibe-tools",
   "description": "CLI tools for AI agents",
   "keywords": [
     "cursor",
+    "vibe",
     "tools",
     "ai",
     "assistant"
@@ -11,7 +12,7 @@
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
-    "cursor-tools": "dist/index.mjs"
+    "vibe-tools": "dist/index.mjs"
   },
   "scripts": {
     "compile": "tsc -build",
@@ -58,6 +59,7 @@
     "@browserbasehq/stagehand": "^1.14.0",
     "@modelcontextprotocol/sdk": "^1.5.0",
     "@types/glob": "^8.1.0",
+    "consola": "^3.4.2",
     "dotenv": "16.4.7",
     "eventsource-client": "1.1.3",
     "fast-glob": "^3.3.3",
