--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.6.0-alpha.17",
+  "version": "0.60.1",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
