added debug info for repomix (#128)
* added debug info for repomix

* change threshold back to 200k

---------

Co-authored-by: Andrew Jefferson <8148776+eastlondoner@users.noreply.github.com>

--- a/vibe-tools.config.json
+++ b/vibe-tools.config.json
@@ -4,18 +4,18 @@
     "model": "sonar-pro"
   },
   "plan": {
-    "fileProvider": "openrouter",
-    "thinkingProvider": "openrouter",
-    "fileModel": "google/gemini-2.5-flash-preview",
-    "thinkingModel": "google/gemini-2.5-flash-preview"
+    "fileProvider": "anthropic",
+    "thinkingProvider": "anthropic",
+    "fileModel": "claude-3-7-sonnet",
+    "thinkingModel": "claude-3-7-sonnet"
   },
   "repo": {
     "provider": "gemini",
-    "model": "gemini-2.5-flash-preview"
+    "model": "gemini-2.5-flash-preview-04-17"
   },
   "doc": {
-    "provider": "openrouter",
-    "model": "google/gemini-2.5-flash-preview"
+    "provider": "gemini",
+    "model": "gemini-2.5-pro-preview-03-25"
   },
   "ide": "cursor"
 }
