--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dev": "node --import=tsx src/index.ts",
     "serve-test": "bun --hot tests/commands/browser/serve.ts",
     "test": "vitest",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format": "prettier --write \"infra/**/*.{ts,tsx,js,jsx,json,md,vue}\" \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "lint": "npm run format && eslint \"src/**/*.ts\"",
     "release": "node scripts/release.cjs"
   },
@@ -48,10 +48,10 @@
     "@eslint/js": "^9.25.1",
     "@types/bun": "^1.2.10",
     "@types/node": "^22.15.2",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "esbuild": "^0.25.3",
-    "eslint": "^9.25.1",
+    "eslint": "^9.27.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "tsx": "^4.19.3",
