--- a/infra/package.json
+++ b/infra/package.json
@@ -3,20 +3,24 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "typecheck": "nuxt typecheck && echo 'running typecheck' && tsc -build && echo 'typecheck done'",
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "deploy": "bun run alchemy/alchemy.run.ts",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --fix ."
   },
   "dependencies": {
-    "@nuxt/eslint": "1.3.0",
+    "@nuxt/eslint": "^1.4.0",
     "@types/node": "^22.15.12",
-    "alchemy": "^0.7.3",
+    "alchemy": "^0.16.6",
     "eslint": "^9.26.0",
     "nuxt": "^3.17.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-tsc": "^2.2.10"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250506.0",
