--- a/vibe-tools.config.json
+++ b/vibe-tools.config.json
@@ -6,16 +6,16 @@
   "plan": {
     "fileProvider": "gemini",
     "thinkingProvider": "openai",
-    "fileModel": "gemini-2.5-flash-preview-04-17",
-    "thinkingModel": "o4-mini"
+    "fileModel": "gemini-2.5-flash-preview",
+    "thinkingModel": "o3"
   },
   "repo": {
     "provider": "gemini",
-    "model": "gemini-2.5-pro-preview"
+    "model": "gemini-2.5-pro-preview-03-25"
   },
   "doc": {
     "provider": "gemini",
-    "model": "gemini-2.5-pro-preview"
+    "model": "gemini-2.5-pro-preview-03-25"
   },
   "ide": "cursor"
 }
