--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.61.0",
+  "version": "0.61.3",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -45,38 +45,38 @@
     "url": "https://github.com/eastlondoner/cursor-tools/issues"
   },
   "devDependencies": {
+    "@anthropic-ai/sdk": "^0.51.0",
+    "@browserbasehq/sdk": "^2.6.0",
+    "@browserbasehq/stagehand": "^2.2.1",
     "@eslint/js": "^9.25.1",
+    "@modelcontextprotocol/sdk": "^1.10.2",
     "@types/bun": "^1.2.10",
     "@types/node": "^22.15.2",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "consola": "^3.4.2",
     "esbuild": "^0.25.3",
     "eslint": "^9.27.0",
+    "fast-glob": "^3.3.3",
+    "formdata-node": "^6.0.3",
     "globals": "^16.0.0",
+    "openai": "^4.100.0",
+    "p-queue": "^8.1.0",
     "prettier": "^3.5.3",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "zod": "3.24.3"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.40.0",
-    "@browserbasehq/stagehand": "^2.1.0",
-    "@modelcontextprotocol/sdk": "^1.10.2",
-    "@types/glob": "^8.1.0",
-    "consola": "^3.4.2",
     "dotenv": "16.5.0",
     "eventsource-client": "1.1.3",
-    "fast-glob": "^3.3.3",
-    "glob": "^11.0.2",
     "google-auth-library": "^9.15.1",
-    "openai": "^4.96.0",
-    "p-queue": "^8.1.0",
     "playwright": "1.50.1",
     "playwright-core": "1.50.1",
     "punycode": "^2.3.1",
-    "repomix": "0.3.3",
-    "zod": "3.24.3"
+    "repomix": "0.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
