--- a/vibe-tools.config.json
+++ b/vibe-tools.config.json
@@ -11,7 +11,7 @@
   },
   "repo": {
     "provider": "gemini",
-    "model": "gemini-2.5-pro-preview-03-25"
+    "model": "gemini-2.5-pro"
   },
   "doc": {
     "provider": "gemini",
