added --web flag LETS GOO (#146)

--- a/vibe-tools.config.json
+++ b/vibe-tools.config.json
@@ -11,7 +11,7 @@
   },
   "repo": {
     "provider": "gemini",
-    "model": "gemini-2.5-pro"
+    "model": "gemini-2.5-flash-preview-05-20"
   },
   "doc": {
     "provider": "gemini",
