--- a/vibe-tools.config.json
+++ b/vibe-tools.config.json
@@ -6,7 +6,7 @@
   "plan": {
     "fileProvider": "gemini",
     "thinkingProvider": "openai",
-    "fileModel": "gemini-2.5-flash-preview",
+    "fileModel": "gemini-2.5-flash-preview-05-20",
     "thinkingModel": "o3"
   },
   "repo": {
@@ -15,7 +15,7 @@
   },
   "doc": {
     "provider": "gemini",
-    "model": "gemini-2.5-pro-preview-03-25"
+    "model": "gemini-2.5-pro-preview-05-06"
   },
   "ide": "cursor"
 }
