--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.61.5",
+  "version": "0.62.3",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -50,6 +50,7 @@
     "@browserbasehq/stagehand": "^2.2.1",
     "@eslint/js": "^9.25.1",
     "@modelcontextprotocol/sdk": "^1.10.2",
+    "@playwright/test": "1.52.0",
     "@types/bun": "^1.2.10",
     "@types/node": "^22.15.2",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
@@ -73,8 +74,8 @@
     "dotenv": "16.5.0",
     "eventsource-client": "1.1.3",
     "google-auth-library": "^9.15.1",
-    "playwright": "1.50.1",
-    "playwright-core": "1.50.1",
+    "playwright": "1.52.0",
+    "playwright-core": "1.52.0",
     "punycode": "^2.3.1",
     "repomix": "0.3.3"
   },
@@ -83,11 +84,18 @@
   },
   "overrides": {
     "punycode": "^2.3.1",
-    "playwright-core": "1.50.1"
+    "playwright-core": "1.52.0",
+    "@playwright/test": "1.52.0",
+    "playwright": "1.52.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
-    ]
+    ],
+    "overrides": {
+      "playwright-core": "1.52.0",
+      "@playwright/test": "1.52.0",
+      "playwright": "1.52.0"
+    }
   }
 }
