--- a/vibe-tools.config.json
+++ b/vibe-tools.config.json
@@ -5,17 +5,17 @@
   },
   "plan": {
     "fileProvider": "gemini",
-    "thinkingProvider": "openai",
-    "fileModel": "gemini-2.5-flash-preview-05-20",
-    "thinkingModel": "o3"
+    "thinkingProvider": "anthropic",
+    "fileModel": "gemini-2.5-flash",
+    "thinkingModel": "claude-opus-4-20250514"
   },
   "repo": {
     "provider": "gemini",
-    "model": "gemini-2.5-flash-preview-05-20"
+    "model": "gemini-2.5-flash"
   },
   "doc": {
     "provider": "gemini",
-    "model": "gemini-2.5-pro-preview-05-06"
+    "model": "gemini-2.5-pro"
   },
   "ide": "cursor"
 }
