--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ai",
     "assistant"
   ],
-  "version": "0.62.10",
+  "version": "0.63.1",
   "type": "module",
   "main": "./dist/index.mjs",
   "bin": {
@@ -45,57 +45,58 @@
     "url": "https://github.com/eastlondoner/cursor-tools/issues"
   },
   "devDependencies": {
-    "@anthropic-ai/sdk": "^0.51.0",
+    "@anthropic-ai/sdk": "^0.56.0",
     "@browserbasehq/sdk": "^2.6.0",
-    "@browserbasehq/stagehand": "^2.3.1",
-    "@eslint/js": "^9.25.1",
-    "@modelcontextprotocol/sdk": "^1.10.2",
-    "@playwright/test": "1.53.1",
-    "@types/bun": "^1.2.10",
-    "@types/node": "^22.15.2",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@browserbasehq/stagehand": "^2.4.1",
+    "@eslint/js": "^9.31.0",
+    "@modelcontextprotocol/sdk": "^1.15.1",
+    "@playwright/test": "1.54.1",
+    "@types/bun": "^1.2.18",
+    "@types/node": "^24.0.14",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "consola": "^3.4.2",
-    "esbuild": "^0.25.3",
-    "eslint": "^9.27.0",
+    "esbuild": "^0.25.6",
+    "eslint": "^9.31.0",
     "fast-glob": "^3.3.3",
     "formdata-node": "^6.0.3",
-    "globals": "^16.0.0",
-    "openai": "^4.100.0",
+    "globals": "^16.3.0",
+    "openai": "^5.9.2",
     "p-queue": "^8.1.0",
-    "prettier": "^3.5.3",
-    "tsx": "^4.19.3",
+    "prettier": "^3.6.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "vibe-rules": "^0.2.31",
-    "vitest": "^3.1.2",
-    "zod": "3.24.3"
+    "vibe-rules": "^0.3.50",
+    "vitest": "^3.2.4",
+    "zod": "4.0.5"
   },
   "dependencies": {
-    "dotenv": "16.5.0",
-    "eventsource-client": "1.1.3",
-    "google-auth-library": "^9.15.1",
-    "playwright": "1.53.1",
-    "playwright-core": "1.53.1",
+    "dotenv": "17.2.0",
+    "eventsource-client": "1.1.4",
+    "google-auth-library": "^10.1.0",
+    "playwright": "1.54.1",
+    "playwright-core": "1.54.1",
     "punycode": "^2.3.1",
-    "repomix": "0.3.3"
+    "repomix": "1.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "overrides": {
     "punycode": "^2.3.1",
-    "playwright-core": "1.53.1",
-    "@playwright/test": "1.53.1",
-    "playwright": "1.53.1"
+    "playwright-core": "1.54.1",
+    "@playwright/test": "1.54.1",
+    "playwright": "1.54.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
     ],
     "overrides": {
-      "playwright-core": "1.53.1",
-      "@playwright/test": "1.53.1",
-      "playwright": "1.53.1"
+      "playwright-core": "1.54.1",
+      "@playwright/test": "1.54.1",
+      "playwright": "1.54.1"
     }
-  }
+  },
+  "packageManager": "pnpm@10.13.1"
 }
