feat: Add comprehensive Linear integration (#170)
* feat: Add comprehensive Linear integration

- Add Linear command with connect and get-issue/issue subcommands
- Support dual authentication: Personal API keys and OAuth2 PKCE flow
- Interactive authentication setup with browser integration
- Complete issue display with comments, attachments, and metadata
- Support both Linear identifiers (ITE-123) and UUID formats
- GraphQL API integration for comprehensive data retrieval
- Add LINEAR_API_KEY environment variable support
- Update documentation in README.md and vibe-rules.ts
- Add dependency: open package for browser automation

* docs: Update documentation and dependencies for Linear integration

- Update CHANGELOG.md with Linear integration features for v0.64.0
- Update README.md with comprehensive Linear integration documentation
- Update src/vibe-rules.ts with Linear command information
- Add LINEAR_API_KEY to environment variables documentation
- Add open package dependency for browser automation
- Register LinearCommand in command index
- Update configuration files with Linear support

* fix: Add 'open' package to external dependencies in build config

- Add 'open' to external dependencies list in build.js to fix bundling issues
- Allows Linear authentication to use browser opening functionality
- Fixes build compilation errors with dynamic imports of 'open' package

* fix: Resolve TypeScript compilation errors in Linear connect command

- Fix consola prompt type from 'password' to 'text' (password type not supported)
- Add String() type coercion for clientId and clientSecret in URLSearchParams
- Ensure type compatibility for OAuth flow parameters
- All TypeScript compilation errors resolved

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dotenv": "17.2.0",
     "eventsource-client": "1.1.4",
     "google-auth-library": "^10.1.0",
+    "open": "^10.2.0",
     "playwright": "1.54.1",
     "playwright-core": "1.54.1",
     "punycode": "^2.3.1",
